<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/settings_section_firmware"/>

        <Button
            android:id="@+id/update_firmware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_firmware"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/settings_section_face_templates"/>

        <Button
            android:id="@+id/update_face_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_template"/>

        <Button
            android:id="@+id/delete_face_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_template"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/pin"/>

        <Button
            android:id="@+id/set_pin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_pin"/>

        <Button
            android:id="@+id/delete_pin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_pin"/>
    </LinearLayout>
</LinearLayout>
