<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/connection_status"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:icon="@drawable/ic_bluetooth_white_24dp"
        android:menuCategory="secondary"
        android:title="@string/connection_status"/>

    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/tests"
        android:icon="@android:drawable/ic_secure"
        android:title="@string/tests"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sign_out"
        android:icon="@android:drawable/ic_secure"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
</menu>
